--- a/public/stylesheets/less/foosball.less
+++ b/public/stylesheets/less/foosball.less
@@ -51,10 +51,21 @@
 		list-style: none;
 		float: left;
 		margin: 0;
+		padding-left: 30px;
 
 		&:first-child {
 			padding-left: 0;
 		}
 	}
 
+}
+
+@media screen and (max-width: 400px) {
+    .glossary {
+    	ul {
+    		padding: 0;
+    		padding-left: 0;
+    		padding-bottom: 10px;
+    	}
+    }
 }
